--- a/PersonalFactsApp/MainPage.xaml
+++ b/PersonalFactsApp/MainPage.xaml
@@ -8,7 +8,7 @@
     
     <StackLayout>
 
-        <ListView x:Name="listView" RowHeight="70" ItemSelected="OnSelection">
+        <ListView x:Name="listView" RowHeight="70">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ImageCell Text="{Binding ShortFact}"
